Closed
Bug 850090
Opened 12 years ago
Closed 12 years ago
test_bug562554.xul,test_bug624329.xul,test_bug585946.xul,test_bug554279.xul,test_bug509732.xul,test_findbar_events.xul,test_closemenu_attribute.xul | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached')
Categories
(Core :: DOM: Core & HTML, defect)
Tracking
()
RESOLVED
FIXED
mozilla23
People
(Reporter: RyanVM, Assigned: bzbarsky)
References
Details
(Keywords: assertion, intermittent-failure)
Attachments
(1 file)
CCing some people who've touched this recently. Interestingly, the same assert is firing on some of the tests above this one too (visible in the full log).
https://tbpl.mozilla.org/php/getParsedLog.php?id=20536646&tree=Mozilla-Inbound
Rev3 WINNT 5.1 mozilla-inbound debug test mochitest-other on 2013-03-11 14:06:51 PDT for push 1e3e737fce51
slave: talos-r3-xp-065
14:25:55 INFO - 17691 INFO TEST-START | chrome://mochitests/content/chrome/toolkit/content/tests/chrome/test_bug562554.xul
14:25:55 INFO - ++DOMWINDOW == 52 (11BE9A18) [serial = 3002] [outer = 0C8F6CC0]
14:25:55 INFO - 17692 INFO TEST-INFO | chrome://mochitests/content/chrome/toolkit/content/tests/chrome/test_bug562554.xul | must wait for load
14:25:55 INFO - [Parent 136] WARNING: NS_ENSURE_SUCCESS(rv, false) failed with result 0x8000FFFF: file e:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/content/base/src/nsContentUtils.cpp, line 3013
14:25:55 INFO - [Parent 136] WARNING: NS_ENSURE_TRUE(pusher.Push(aBoundElement)) failed: file e:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/content/xbl/src/nsXBLProtoImplMethod.cpp, line 308
14:25:55 INFO - [Parent 136] WARNING: NS_ENSURE_SUCCESS(rv, false) failed with result 0x8000FFFF: file e:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/content/base/src/nsContentUtils.cpp, line 3013
14:25:55 INFO - [Parent 136] WARNING: NS_ENSURE_TRUE(pusher.Push(aBoundElement)) failed: file e:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/content/xbl/src/nsXBLProtoImplMethod.cpp, line 308
14:25:55 INFO - [Parent 136] ###!!! ASSERTION: stylesheet not found: 'Not Reached', file e:/builds/moz2_slave/m-in-w32-d-0000000000000000000/build/content/base/src/nsDocument.cpp, line 3673
14:25:55 INFO - --DOMWINDOW == 51 (0DBA11F8) [serial = 2978] [outer = 00000000] [url = data:text/html,text]
14:25:55 INFO - --DOMWINDOW == 50 (12383CB8) [serial = 2967] [outer = 00000000] [url = file:///c:/docume~1/cltbld/locals~1/temp/tmpmupbfs]
14:25:55 INFO - --DOMWINDOW == 49 (14BAD668) [serial = 2973] [outer = 00000000] [url = data:text/html,text<iframe%20id='invisible'%20style='display:%20none;'%20src='data:text/html,text'></iframe>text<iframe%20id='visible'%20src='data:text/html,text'></iframe>text]
14:25:55 INFO - --DOMWINDOW == 48 (126F1E40) [serial = 2983] [outer = 00000000] [url = chrome://mochitests/content/chrome/toolkit/content/tests/chrome/bug451540_window.xul]
14:25:55 INFO - --DOMWINDOW == 47 (0DBA81E0) [serial = 2971] [outer = 00000000] [url = chrome://mochitests/content/chrome/toolkit/content/tests/chrome/bug451286_window.xul]
14:25:55 INFO - --DOMWINDOW == 46 (11E406B0) [serial = 2985] [outer = 00000000] [url = data:text/html,<input%20id="inp"%20type="text"%20/><textarea%20id="tarea"/>]
14:25:55 INFO - 17693 INFO TEST-PASS | chrome://mochitests/content/chrome/toolkit/content/tests/chrome/test_bug562554.xul | Correct number of clicks on button 1
14:25:55 INFO - 17694 INFO TEST-PASS | chrome://mochitests/content/chrome/toolkit/content/tests/chrome/test_bug562554.xul | Correct number of clicks on button 2
14:25:55 INFO - 17695 INFO TEST-PASS | chrome://mochitests/content/chrome/toolkit/content/tests/chrome/test_bug562554.xul | Correct number of popupshowing events received
14:25:55 INFO - 17696 INFO TEST-END | chrome://mochitests/content/chrome/toolkit/content/tests/chrome/test_bug562554.xul | finished in 496ms
14:25:55 INFO - ++DOMWINDOW == 47 (1265FE70) [serial = 3003] [outer = 0C8F6CC0]
14:25:55 INFO - 17697 ERROR TEST-UNEXPECTED-FAIL | chrome://mochitests/content/chrome/toolkit/content/tests/chrome/test_bug562554.xul | Assertion count 1 is greater than expected range 0-0 assertions.
Comment 1•12 years ago
|
||
Summary: content/tests/chrome/test_bug562554.xul | Assertion count 1 is greater than expected range (stylesheet not found: 'Not Reached') → content/tests/chrome/test_bug562554.xul,test_bug624329.xul, | Assertion count 1 is greater than expected range (stylesheet not found: 'Not Reached')
Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•12 years ago
|
Summary: content/tests/chrome/test_bug562554.xul,test_bug624329.xul, | Assertion count 1 is greater than expected range (stylesheet not found: 'Not Reached') → content/tests/chrome/test_bug562554.xul,test_bug624329.xul, | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached')
Comment 3•12 years ago
|
||
Summary: content/tests/chrome/test_bug562554.xul,test_bug624329.xul, | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached') → content/tests/chrome/test_bug562554.xul,test_bug624329.xul,test_bug585946.xul, | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached')
Reporter | ||
Comment 4•12 years ago
|
||
Summary: content/tests/chrome/test_bug562554.xul,test_bug624329.xul,test_bug585946.xul, | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached') → content/tests/chrome/test_bug562554.xul,test_bug624329.xul,test_bug585946.xul,test_bug554279.xul | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached')
Comment 5•12 years ago
|
||
Summary: content/tests/chrome/test_bug562554.xul,test_bug624329.xul,test_bug585946.xul,test_bug554279.xul | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached') → content/tests/chrome/test_bug562554.xul,test_bug624329.xul,test_bug585946.xul,test_bug554279.xul, test_bug509732.xul | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached')
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment 7•12 years ago
|
||
Summary: content/tests/chrome/test_bug562554.xul,test_bug624329.xul,test_bug585946.xul,test_bug554279.xul, test_bug509732.xul | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached') → test_bug562554.xul,test_bug624329.xul,test_bug585946.xul,test_bug554279.xul,test_bug509732.xul,test_findbar_events.xul | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached')
Comment 8•12 years ago
|
||
Summary: test_bug562554.xul,test_bug624329.xul,test_bug585946.xul,test_bug554279.xul,test_bug509732.xul,test_findbar_events.xul | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached') → test_bug562554.xul,test_bug624329.xul,test_bug585946.xul,test_bug554279.xul,test_bug509732.xul,test_findbar_events.xul,test_closemenu_attribute.xul | Assertion count {1,2} is greater than expected range (stylesheet not found: 'Not Reached')
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Reporter | ||
Comment 12•12 years ago
|
||
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 23•12 years ago
|
||
Probably me, but how do I get a stack for those asserts?
Flags: needinfo?(bzbarsky) → needinfo?(emorley)
Assignee | ||
Comment 24•12 years ago
|
||
Ah, some of the non-Windows logs have it:
14:55:17 INFO - ###!!! ASSERTION: stylesheet not found: 'Not Reached', file ../../../../content/base/src/nsDocument.cpp, line 3674
14:55:17 INFO - nsStyleLinkElement::DoUpdateStyleSheet(nsIDocument*, nsICSSLoaderObserver*, bool*, bool*, bool) [content/base/src/nsStyleLinkElement.cpp:301]
14:55:17 INFO - nsStyleLinkElement::UpdateStyleSheetInternal(nsIDocument*, bool) [content/base/src/nsStyleLinkElement.cpp:194]
14:55:17 INFO - mozilla::dom::XMLStylesheetProcessingInstruction::UnbindFromTree(bool, bool) [obj-firefox/dist/include/nsCOMPtr.h:492]
14:55:17 INFO - nsDocument::cycleCollection::UnlinkImpl(void*) [content/base/src/nsDocument.cpp:1772]
14:55:17 INFO - nsXULDocument::cycleCollection::UnlinkImpl(void*) [content/xul/document/src/nsXULDocument.cpp:340]
Assignee | ||
Comment 25•12 years ago
|
||
I'm not quite sure why the sheet isn't in mStyleSheets at this point, but would it make sense to just skip the assert during unlink?
Flags: needinfo?(emorley) → needinfo?(bugs)
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Reporter | ||
Comment 42•12 years ago
|
||
(In reply to Olli Pettay [:smaug] from comment #30)
> Sounds ok.
bz, can you whip up such a patch? :)
Flags: needinfo?(bzbarsky)
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 52•12 years ago
|
||
Attachment #731964 -
Flags: review?(bugs)
Flags: needinfo?(bzbarsky)
Assignee | ||
Updated•12 years ago
|
Assignee: nobody → bzbarsky
Assignee | ||
Updated•12 years ago
|
Whiteboard: [need review]
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•12 years ago
|
Attachment #731964 -
Flags: review?(bugs) → review+
Assignee | ||
Comment 58•12 years ago
|
||
Whiteboard: [need review]
Target Milestone: --- → mozilla23
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Reporter | ||
Comment 65•12 years ago
|
||
On the bright side, the frequency of this assert seems to have dropped since comment 58. On the down side, we are still seeing it, so it wasn't a complete fix :(
Flags: needinfo?(bzbarsky)
Assignee | ||
Comment 66•12 years ago
|
||
Uh... Looks like http://hg.mozilla.org/mozilla-central/rev/bbad31208ebd backed out this fix, no?
Ms2ger, was there a reason for that?
Flags: needinfo?(bzbarsky) → needinfo?(Ms2ger)
Assignee | ||
Comment 67•12 years ago
|
||
Relanded the fix on inbound: https://hg.mozilla.org/integration/mozilla-inbound/rev/51973ea57c60
Flags: needinfo?(Ms2ger)
Reporter | ||
Comment 68•12 years ago
|
||
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Comment 69•12 years ago
|
||
Looks like you missed the expected assertions annotation in toolkit/content/tests/chrome/test_bug451286.xul.
Assignee | ||
Comment 70•12 years ago
|
||
Missed? As in they were not labeled with this bug#? ;)
So does that mean that bug 683159 and bug 849394 should just be marked fixed and the expectAssertions call there removed?
Flags: needinfo?(Ms2ger)
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Assignee | ||
Comment 81•12 years ago
|
||
> Looks like it, yes.
OK, let's do that in bug 683159.
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Comment hidden (Legacy TBPL/Treeherder Robot) |
Updated•6 years ago
|
Component: DOM → DOM: Core & HTML
You need to log in
before you can comment on or make changes to this bug.
Description
•