Bug 850090.  Don't assert things about our stylesheets during unlink, since our state can be kinda inconsistent then.  r=smaug